--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "nodemon -r tsconfig-paths/register ./src/web/app.ts | pino-pretty -C",
     "build": "tsc --project tsconfig.json && tsc-alias -p tsconfig.json",
     "mysql:migrate": "ts-node database/script.ts",
-    "docker:run": "docker-compose up -d"
+    "docker": "docker-compose up -d"
   },
   "keywords": [],
   "author": "",
