running deployement on vercel

--- a/.env
+++ b/.env
@@ -1,10 +1,21 @@
 NODE_Env=development
-MYSQL_HOST=
-MYSQL_ROOT_PASSWORD=password
-MYSQL_USER=root
-MYSQL_DATABASE=task_manager
-MYSQL_PORT=3310
+# MYSQL_HOST=
+# MYSQL_ROOT_PASSWORD=password
+# MYSQL_USER=root
+# MYSQL_DATABASE=task_manager
+# MYSQL_PORT=3310
 
 SECRET_TOKEN = "access"
 
-REDIS_URL=http://localhost:6379/
+REDIS_URL=redis://default:VJRlJIISEuWFdrh2Qj75EPdygxxUwKY8@redis-19845.c323.us-east-1-2.ec2.cloud.redislabs.com:19845
+
+# Deployment database
+
+NODE_Env=development
+MYSQL_HOST=bnfzswig9zpw0opocoun-mysql.services.clever-cloud.com
+MYSQL_ROOT_PASSWORD=XA6wIMcgkOAJVRhDlt8B
+MYSQL_USER=unynu6qkiixogr6a
+MYSQL_DATABASE=bnfzswig9zpw0opocoun
+MYSQL_PORT=3306
+
+SECRET_TOKEN = "access"
