running deployement on vercel

--- a/.env
+++ b/.env
@@ -4,8 +4,9 @@ NODE_Env=development
 # MYSQL_USER=root
 # MYSQL_DATABASE=task_manager
 # MYSQL_PORT=3310
+# REDIS_URL=http://localhost:6379/
+# SECRET_TOKEN = "access"
 
-SECRET_TOKEN = "access"
 
 REDIS_URL=redis://default:VJRlJIISEuWFdrh2Qj75EPdygxxUwKY8@redis-19845.c323.us-east-1-2.ec2.cloud.redislabs.com:19845
 
