--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "dev": "nodemon -r tsconfig-paths/register ./src/web/app.ts | pino-pretty -C",
     "build": "tsc --project tsconfig.json && tsc-alias -p tsconfig.json",
     "mysql:migrate": "ts-node database/script.ts",
-    "start": "ts-node -r tsconfig-paths/register src/web/app.ts",
-    "start2" : "ts-node -r tsconfig-paths/register src/web/app.ts",
+    "start": "tsc --project tsconfig.json && tsc-alias -p tsconfig.json  && node build/src/web/app.js",
     "docker": "docker-compose up -d"
   },
   "keywords": [],
