running deployment again v8

--- a/.env
+++ b/.env
@@ -11,7 +11,7 @@
 REDIS_URL=redis://default:VJRlJIISEuWFdrh2Qj75EPdygxxUwKY8@redis-19845.c323.us-east-1-2.ec2.cloud.redislabs.com:19845
 
 # Deployment database
-
+PORT=5000
 NODE_Env=development
 MYSQL_HOST=bnfzswig9zpw0opocoun-mysql.services.clever-cloud.com
 MYSQL_ROOT_PASSWORD=XA6wIMcgkOAJVRhDlt8B
